--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background-color: azure;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
 code {
